# finite-volume-method

./: .gitignore  CMakeLists.txt  README.md
src/: 01-2D-heat.cpp  02-1D-convection.cpp  CMakeLists.txt  main.cpp  二维热传导.cpp
src/tool/: CMakeLists.txt  tool.cpp  tool.h
